# date-generator

./: .gitignore  Cargo.toml  Dockerfile  README.md  example.txt
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
src/: lib.rs  main.rs  parsers.rs
